# atat

./: BUGS  HACKING  INSTALL  Makefile.am  Makefile.in  NEWS  NOTES.org  README.md  bootstrap  configure  configure.ac
src/: Makefile.am  Makefile.in
src/main/: Makefile.am  Makefile.in
src/main/bash/: Makefile.in
src/main/sh/: Makefile.am  Makefile.in
